rename frame, remove inline-styles

--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@ Blog <a href="https://github.com/mozfreddyb/worklog">handwritten</a>, because I 
 </small></footer>
 
 
-<iframe id="f" src="articles/" style="display:none"></iframe>
+<iframe id="indexframe" src="articles/"></iframe>
 </body></html>
