--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<link href="css/main.css" rel="stylesheet">
-<link href="css/fira.css" rel="stylesheet">
-<script src="js/app.js"></script>
-<script src="js/marked.min.js"></script>
-<link rel="stylesheet" href="styles/default.css">
+  <meta charset="utf-8">
+  <meta http-equiv="content-security-policy" content="default-src 'self'; object-src 'none'; base-uri 'none';">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="css/fira.css" rel="stylesheet">
+  <script src="js/app.js"></script>
+  <script src="js/marked.min.js"></script>
+  <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
 <header>
