minor change: indentation in HTML, removed leftover comment in JS

--- a/index.html
+++ b/index.html
@@ -16,19 +16,16 @@
 </header>
 
 <div id="flexcontainer">
-
-    <article id="mainarticle">
+  <article id="mainarticle">
   </article>
-
   <nav id="nav">
-  <h5>Articles:</h5>
+    <h5>Articles:</h5>
   </nav>
-
 </div>
 
 
 <footer><hr><small>
-Blog <a href="https://github.com/mozfreddyb/worklog">handwritten</a>, because I can. Thanks to Markdown, marked.js, highlight.js. 👍
+Blog <a href="https://github.com/mozfreddyb/worklog-system">handwritten</a>, because I can. Thanks to Markdown, marked.js, highlight.js. 👍
 </small></footer>
 
 
