make it look decent on mobile

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 <header>
-  <h1>Worklog</h1>
+  <h1><a href="#">Worklog</a></h1>
 </header>
 
-<div id="flexcontainer">
-  <article id="mainarticle">
+<div id="main">
+  <article id="article">
   </article>
   <nav id="nav">
     <h5>Articles:</h5>
@@ -25,7 +25,8 @@
 
 
 <footer><hr><small>
-Blog <a href="https://github.com/mozfreddyb/worklog-system">handwritten</a>, because I can. Thanks to Markdown, marked.js, highlight.js. 👍
+Blog <a href="https://github.com/mozfreddyb/worklog-system">handwritten</a>,
+because I can. Thanks to Markdown, marked.js, highlight.js. 👍
 </small></footer>
 
 
