border, padding, style, layout

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
 <div id="main">
   <article id="article">
   </article>
+  <hr>
   <nav id="nav">
     <h5>Articles:</h5>
   </nav>
 </div>
 
+<hr>
 
-<footer><hr><small>
+<footer><small>
 Blog <a href="https://github.com/mozfreddyb/worklog-system">handwritten</a>,
 because I can. Thanks to Markdown, marked.js, highlight.js. 👍
 </small></footer>
